# karpathy-ml

./: pyproject.toml
gpt/: bigram.py  colab.txt  samples.txt  v2.py
makemore/: makemore.ipynb  makemore_mlp.ipynb  makemore_part2.ipynb  makemore_part3.ipynb  makemore_part4.ipynb  makemore_part5.ipynb
micrograd/: book.ipynb
micrograd/.ipynb_checkpoints/: book-checkpoint.ipynb
